# libetonyek

./: .gitignore  .gitreview  AUTHORS  FEATURES  FEATURES.md  HACKING  HACKING.md  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  buildnumber.sh  configure.ac  createBuildNumber.pl  groups  libetonyek.pc.in  libkeynote.pc.in  project.config
docs/doxygen/: Makefile.am  doxygen.cfg
inc/: Makefile.am
inc/libetonyek/: EtonyekDocument.h  KEYDocument.h  KEYPresentationInterface.h  KEYStringVector.h  Makefile.am  NUMBERSDocument.h  PAGESDocument.h  libetonyek.h  libetonyek_api.h
inc/libkeynote/: KEYDocument.h  KEYPresentationInterface.h  KEYStringVector.h  KNDocument.h  KNStringVector.h  KeyNoteDocument.h  Makefile.am  libkeynote.h
m4/: ax_boost_base.m4  ax_boost_system.m4  dlp_fallthrough.m4
src/: Makefile.am
src/conv/: Makefile.am
src/conv/common/: .gitignore  KEYDirectoryStream.cpp  KEYDirectoryStream.h  KNDirectoryStream.cpp  KNDirectoryStream.h  Makefile.am
src/conv/csv/: .gitignore  Makefile.am  numbers2csv.cpp  numbers2csv.rc.in
src/conv/html/: .gitignore  Makefile.am  pages2html.cpp  pages2html.rc.in
src/conv/raw/: .gitignore  Makefile.am  key2raw.cpp  key2raw.rc.in  keynote2raw.cpp  keynote2raw.rc.in  numbers2raw.cpp  numbers2raw.rc.in  pages2raw.cpp  pages2raw.rc.in
src/conv/svg/: .gitignore  Makefile.am  key2xhtml.cpp  key2xhtml.rc.in  keynote2xhtml.cpp  keynote2xhtml.rc.in
src/conv/text/: .gitignore  Makefile.am  key2text.cpp  key2text.rc.in  numbers2text.cpp  numbers2text.rc.in  pages2text.cpp  pages2text.rc.in
src/fuzz/: Makefile.am  key6fuzzer.cpp
src/lib/: .gitignore  EtonyekDocument.cpp  IWAField.cpp  IWAField.h  IWAMessage.cpp  IWAMessage.h  IWAObjectIndex.cpp  IWAObjectIndex.h  IWAObjectType.h  IWAParser.cpp  IWAParser.h  IWAReader.cpp  IWAReader.h  IWASnappyStream.cpp  IWASnappyStream.h  IWAText.cpp  IWAText.h  IWORKChainedTokenizer.cpp  IWORKChainedTokenizer.h  IWORKChart.cpp  IWORKChart.h  IWORKCollector.cpp  IWORKCollector.h  IWORKDictionary.cpp  IWORKDictionary.h  IWORKDiscardContext.cpp  IWORKDiscardContext.h  IWORKDocumentInterface.cpp  IWORKDocumentInterface.h  IWORKEnum.h  IWORKFormula.cpp  IWORKFormula.h  IWORKLanguageManager.cpp  IWORKLanguageManager.h  IWORKMemoryStream.cpp  IWORKMemoryStream.h  IWORKObject.cpp  IWORKObject.h  IWORKOutputElements.cpp  IWORKOutputElements.h  (+341 more)
src/lib/contexts/: IWORKBezierElement.cpp  IWORKBezierElement.h  IWORKBinaryElement.cpp  IWORKBinaryElement.h  IWORKBrContext.cpp  IWORKBrContext.h  IWORKCalcEngineContext.cpp  IWORKCalcEngineContext.h  IWORKCellCommentDrawableInfoElement.cpp  IWORKCellCommentDrawableInfoElement.h  IWORKChartInfoElement.cpp  IWORKChartInfoElement.h  IWORKColorElement.cpp  IWORKColorElement.h  IWORKContainerContext.h  IWORKCoreImageFilterDescriptorElement.cpp  IWORKCoreImageFilterDescriptorElement.h  IWORKDataElement.cpp  IWORKDataElement.h  IWORKDirectCollector.h  IWORKDirectPropertyContextBase.h  IWORKFieldElement.cpp  IWORKFieldElement.h  IWORKFillElement.cpp  IWORKFillElement.h  IWORKFilteredImageElement.cpp  IWORKFilteredImageElement.h  IWORKFoElement.cpp  IWORKFoElement.h  IWORKFormatElement.cpp  IWORKFormatElement.h  IWORKFormulaElement.cpp  IWORKFormulaElement.h  IWORKGeometryElement.cpp  IWORKGeometryElement.h  IWORKGraphicStyleContext.cpp  IWORKGraphicStyleContext.h  IWORKGroupElement.cpp  IWORKGroupElement.h  IWORKHeaderFooterContext.cpp  (+129 more)
src/test/: .gitignore  EtonyekDocumentTest.cpp  IWAFieldTest.cpp  IWAMessageTest.cpp  IWAReaderTest.cpp  IWASnappyStreamTest.cpp  IWORKChainedTokenizerTest.cpp  IWORKFormulaTest.cpp  IWORKLanguageManagerTest.cpp  IWORKPathTest.cpp  IWORKPathTest.h  IWORKPropertyMapTest.cpp  IWORKPropertyMapTest.h  IWORKShapeTest.cpp  IWORKShapeTest.h  IWORKStyleContextTest.cpp  IWORKStyleContextTest.h  IWORKStyleStackTest.cpp  IWORKStyleTest.cpp  IWORKSubDirStreamTest.cpp  IWORKTokenizerBaseTest.cpp  IWORKTransformationTest.cpp  IWORKTransformationTest.h  IWORKXMLReaderTest.cpp  IWORKXMLReaderTest.h  KEY2TokenTest.cpp  KEY2TokenTest.h  KEYOutputTest.cpp  KEYOutputTest.h  KEYPathTest.cpp  KEYPathTest.h  KEYPropertyMapTest.cpp  KEYPropertyMapTest.h  KEYShapeTest.cpp  KEYShapeTest.h  KEYStyleContextTest.cpp  KEYStyleContextTest.h  KEYStylesTest.cpp  KEYStylesTest.h  KEYTransformationTest.cpp  (+28 more)
src/test/data/: keynote4.apxl  keynote6-file.key  numbers2-file.numbers  numbers2.xml  numbers3-file.numbers  pages4-file.pages  pages4.xml  pages5-extra-dir.pages  unsupported.xml
src/test/data/keynote6-package.key/Metadata/: DocumentIdentifier  Properties.plist
src/test/data/numbers2-package.numbers/: buildVersionHistory.plist
src/test/data/numbers3-package.numbers/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
src/test/data/pages4-package.pages/: buildVersionHistory.plist
src/test/data/unsupported/Index/: AnnotationAuthorStorage.iwa  CalculationEngine.iwa  DocumentStylesheet.iwa  Metadata.iwa  ViewState.iwa
src/test/data/unsupported/Index/Tables/: DataList.iwa
src/test/data/unsupported1.package/Metadata/: DocumentIdentifier  Properties.plist
